# csv-data-anonymizer

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  components.json  electrobun.config.ts  electron.vite.config.ts  knip.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json  vite.renderer.config.ts  vitest.config.ts
.github/workflows/: ci.yml  dead-code.yml  release.yml
crates/csv-anonymizer-app/: Cargo.toml
crates/csv-anonymizer-app/src/: app_logic.rs  cli.rs  main.rs  settings.rs  theme.rs
crates/csv-anonymizer-core/: Cargo.toml
crates/csv-anonymizer-core/benches/: csv_streaming.rs  detector_matrix.rs  direct_input_paste.rs
crates/csv-anonymizer-core/src/: csv_io.rs  detection.rs  error.rs  file_ops.rs  hash.rs  lib.rs  metadata.rs  preview.rs  process_control.rs  release_report.rs  report_notes.rs  service.rs  smart.rs  strategies.rs  types.rs
crates/csv-anonymizer-core/src/csv_io/: tests.rs
crates/csv-anonymizer-core/src/detection/: candidate.rs  header.rs  header_rules.rs  header_taxonomy.json  locale.rs  national_id.rs  postal.rs  privacy.rs  scoring.rs  spans.rs  tests.rs  validators.rs  value.rs
crates/csv-anonymizer-core/src/detection/tests/: column_type.rs  locale_matrix.rs  multilingual_matrix.rs  privacy.rs  taxonomy.rs  validators.rs
crates/csv-anonymizer-core/src/direct_input/: csv_text.rs  documents.rs  format_detection.rs  mod.rs  quick.rs  shared.rs  tests.rs  text.rs  xml.rs
crates/csv-anonymizer-core/src/direct_input/tests/: redaction.rs
crates/csv-anonymizer-core/src/metadata/: tests.rs
crates/csv-anonymizer-core/src/privacy/: dataset.rs  differential_privacy.rs  formal.rs  generalization.rs  mod.rs  roles.rs  synthetic.rs
crates/csv-anonymizer-core/src/privacy/differential_privacy/: aggregate.rs  budget.rs  report.rs  validation.rs  writer.rs
crates/csv-anonymizer-core/src/service/: controls.rs  path_validation.rs  preflight.rs  preview.rs  privacy_report.rs  tests.rs
crates/csv-anonymizer-core/src/service/tests/: analysis_preview.rs  anonymize.rs  mod.rs  preflight.rs  privacy_releases.rs  smart_replacement.rs
crates/csv-anonymizer-core/src/service/tests/privacy_releases/: differential_privacy.rs  formal_privacy.rs  mod.rs  privacy_report.rs  synthetic_data.rs
crates/csv-anonymizer-core/src/strategies/: mod.rs  names.rs  numeric.rs  redaction.rs  state.rs  structured.rs  tests.rs
docs/: cleanup-phased-plan-2026-07-01.md  code-quality-assessment-2026-07-01.md  codebase-review-2026-06-29.md  dependency-audit-followups.md  detector-library-evaluation.md  electrobun-migration-plan.md  full-codebase-review-and-improvement-plan-2026-07-01.md  modernization-status-2026-07-13.md  multilingual-detection-phased-plan.md  multilingual-header-detection-investigation.md  private-seed-vaulting.md  releasing.md  rust-rewrite-plan.md  value-first-detection-design.md  value-first-detection-plan-2026-07-05.md
e2e/: anonymizer.spec.ts
frontend/: eslint.config.js  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
frontend/e2e/: workflow.spec.ts
frontend/src/: App.test.tsx  App.tsx  dataOptions.test.ts  dataOptions.ts  defaults.ts  glossary.ts  index.css  limits.ts  main.tsx  sectionHelp.ts  tauri.ts  types.ts
scripts/: build_apt_repository.py  build_frontend_for_tauri.sh  cargo-audit.mjs  cargo-machete.mjs  check-apt-installer.mjs  check-apt-repository.mjs  check-contracts.mjs  check-docs.mjs  check-electrobun-artifacts.mjs  check-linux-release-helpers.sh  check-release-metadata.mjs  check-rust-artifacts.mjs  check-tauri-prebuilt-frontend.sh  command-utils.mjs  deb_common.py  electrobun-smoke.mjs  ensure-frontend-dist.mjs  generate-linux-icons.mjs  install-apt-repo.sh  notarize-macos-artifact.sh  package-electrobun-linux.mjs  package-rust-linux.mjs  package-rust-macos.mjs  package-tauri-linux.mjs  packaged-smoke.mjs  run-electrobun-build.mjs  rust-smoke.mjs  sign-linux-checksums.sh  stage-apt-installer-assets.sh  validate_linux_package_metadata.py  verify_stdnum_vat_fixtures.py
scripts/__tests__/: cargo-audit.test.mjs  check-docs.test.mjs  workflow-hardening.test.mjs
src/: index.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: analyze_csv.toml  analyze_pasted_data.toml  anonymize_csv.toml  anonymize_pasted_data.toml  cancel_anonymize_job.toml  cancel_local_ai_model_download.toml  count_csv_rows.toml  generate_quick_values.toml  get_anonymize_job_status.toml  get_local_ai_model_download_status.toml  get_local_ai_status.toml  open_local_ai_setup_url.toml  open_output_location.toml  pick_input_csv.toml  pick_output_csv.toml  preflight_anonymization.toml  preview_anonymization.toml  preview_pasted_data.toml  reset_dp_budget_ledger.toml  start_anonymize_job.toml  start_local_ai_model_download.toml
src-tauri/src/: commands.rs  job_registry.rs  jobs.rs  local_ai.rs  main.rs  path_access.rs  settings.rs  tauri_command_list.rs
src-tauri/src/commands/: csv.rs  files.rs  job_commands.rs  local_ai_commands.rs  settings_commands.rs  shared.rs
src-tauri/src/local_ai/: download.rs  mod.rs  ollama.rs  prompt.rs  provider.rs  types.rs
src-tauri/src/settings/: dp_budget_ledger.rs  model.rs  seed_vault.rs  store.rs
src/bun/: index.ts  rpc-schema.ts  rpc.ts  smoke-server.ts
src/config/: defaults.ts  index.ts  loader.ts  schema.ts  selection.ts
src/core/: detector.ts  fileReader.ts  index.ts  metadataBuilder.ts  papaParseErrors.ts  processor.ts  sampleReader.ts  transformer.ts
src/electrobun-view/: index.ts
src/main/: index.ts  ipc.ts
src/preload/: index.ts
src/renderer/: index.html
src/server/: index.ts
src/services/: anonymizerService.ts  settingsStore.ts
src/types/: column.ts  (+5 more)
tests/: test_linux_package_metadata.py
ui/: components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+180 files in other folders)
