[workspace]
members = [
  "crates/csv-anonymizer-app",
  "crates/csv-anonymizer-core",
  "src-tauri",
]
resolver = "3"

[workspace.package]
version = "1.0.39"
edition = "2024"
license = "MIT"
authors = ["Douwe de Vries <douwe.de.vries.82@gmail.com>"]
repository = "https://github.com/ddv1982/csv-data-anonymizer"

[workspace.dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
csv = "1.4.0"
directories = "6.0.0"
open = "5.3.5"
rand = "0.8.5"
regex = "1.12.4"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tauri = "2.11.2"
tauri-build = "2.6.2"
tauri-plugin-dialog = "2.7.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
