[workspace]
members = [
  "crates/csv-anonymizer-app",
  "crates/csv-anonymizer-core",
  "src-tauri",
]
resolver = "3"

[workspace.package]
version = "1.0.64"
edition = "2024"
license = "MIT"
authors = ["Douwe de Vries <douwe.de.vries.82@gmail.com>"]
repository = "https://github.com/ddv1982/csv-data-anonymizer"

[workspace.dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
csv = "1.4.0"
directories = "6.0.0"
card-validate = "2.4.0"
ein = "0.3.0"
email_address = { version = "0.2.9", default-features = false }
iban = { package = "iban_validate", version = "5.0.1" }
open = "5.3.6"
phonenumber = "0.3.9"
rand = "0.8.5"
regex = "1.12.4"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strsim = "0.11.1"
tauri = "2.11.4"
tauri-build = "2.6.3"
tauri-plugin-dialog = "2.7.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
quick-xml = "0.39.4"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.3"
url = "2.5.8"
vat_id_validator = "0.2.0"
yaml_serde = "0.10.4"
ssn = "0.1.1"
