[package]
name = "csv-anonymizer-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native Rust desktop shell for CSV Anonymizer."

[[bin]]
name = "csv-anonymizer"
path = "src/main.rs"

[dependencies]
csv-anonymizer-core = { path = "../csv-anonymizer-core" }
directories.workspace = true
eframe.workspace = true
open.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
