[package]
name = "csv-anonymizer-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native Rust desktop shell for CSV Anonymizer."

[[bin]]
name = "csv-anonymizer"
path = "src/main.rs"

[dependencies]
csv-anonymizer-core = { path = "../csv-anonymizer-core" }

[dev-dependencies]
tempfile.workspace = true
