[package]
name = "csv-anonymizer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Rust core engine for local CSV anonymization."

[dependencies]
card-validate.workspace = true
chrono.workspace = true
csv.workspace = true
ein.workspace = true
email_address.workspace = true
iban.workspace = true
phonenumber.workspace = true
quick-xml.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
url.workspace = true
vat_id_validator.workspace = true
yaml_serde.workspace = true
ssn.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile.workspace = true

[[bench]]
name = "csv_streaming"
harness = false

[[bench]]
name = "direct_input_paste"
harness = false

[[bench]]
name = "detector_matrix"
harness = false
